# handaily

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  pet-menu.html  skel_header.txt  tsconfig.node.json  vite.config.js  vite.config.ts  小寒导入器.bat  小寒日报_electron_mvp_727f8483.plan.md
.cargo/: config.toml
AzurLaneSD-master/: index.html
bundled/prompts/: README.md  persona-preprocess-minimal.md  pet-lines-import.md  report-activity-log.md
characters/: manifest.json
config/: pet-action-template.json  vendors.json
data/: .gitignore  README.md
data/roster/: README.md  bundled-allowlist.json  schema.sql
docs/: ARCHITECTURE.md  BRANCH-client-server-split.md  BRANCH-live2d-only.md  BRANCHES.md  README.md
docs/guides/: pet-folder-bind-rules.md  roster-and-import.md
docs/plans/: 2026-07-12-handaily-monorepo-blhx-unpack.md  (+3 more)
hanimport/: Cargo.toml  README.md  启动小寒导入器.bat  启动网页版.bat
hanimport/docs/: DESIGN.md
hanimport/scripts/: avatar_fetch.py  avatar_jobs.py  build_cubism_config.py  build_model_config.py  character_assets.py  dialog_picker.py  job_store.py  line_skin_match.py  merge_duplicate_characters.py  merge_live2d_motions.py  requirements.txt  roster_api.py  roster_db.py  roster_skin_slot_pack.py  serve_web.py  setup-env.bat  skin_probe.py  test_avatar_fetch.py  test_bind_models.py  test_character_assets.py  test_dialog_picker.py  test_enrich_unpacked_names.py  test_job_store.py  test_job_store_list.py  test_line_skin_match.py  test_lines_import.py  test_merge_alias_dupes.py  test_pipeline_optimize.py  test_purge_folder_chars.py  test_roster_api.py  test_serve_jobs.py  test_serve_routes.py  test_skin_probe.py  test_skins_replace.py  test_strip_skin.py  test_unpack_complete.py  test_unpack_multi_input.py  test_unpack_skip_hx.py  test_wiki_lines_fetch.py  test_wiki_pipeline_job.py  (+9 more)
hanimport/scripts/roster/: aliases.py  bind.py  bind_pipeline.py  cli.py  crud.py  db.py  folder_rules.py  ids.py  import_wiki.py  merge.py  schema.py  skin_slot_pack.py  sync.py
hanimport/scripts/roster/_archive/20260719-pre-decouple-rewrite/: README.md  bind.py  db.py  ids.py  import_ab_bind.py  pet-folder-bind-rules.md  skin_probe.py  transfer_unpack.py
hanimport/scripts/web/: import_ab_bind.py
hanimport/src/: cli.rs  delegate.rs  main.rs  paths.rs
hanimport/src/config/: extract.rs  mod.rs
hanimport/src/unpack/: complete.rs  extract.rs  mod.rs
hanimport/tests/: test_asset_routes.py  test_roster_api.py  test_skin_slot_pack.py
hanimport/web/: app.js  components.css  hub.css  hub.js  index.html  roster.css  roster.html  roster.js  shell.css  shell.js  skins.css  skins.html  skins.js  style.css  unpack.html
hanimport/web/design-system/: tokens.css  tokens.json
hanimport/web/pages/: hub.css  roster.css  skins.css  unpack.css
hanpet/: README.md  index.html  kanmusu-player.html  package.json  pet.html  vite.config.ts
hantransfer/: README.md
hantransfer/desktop/: Cargo.toml  README.md
hantransfer/desktop/src/: agent.rs  api.rs  config.rs  discovery.rs  firewall.rs  importer.rs  main.rs  netutil.rs  notify.rs  outbox.rs  paths.rs  receive.rs  release.rs  server.rs  settings.rs  transfer.rs  tray.rs  trust.rs
personas/: cheshire.json  cheshire.md  default.json  default.md  edu.json  edu.md  manifest.json  phoebe.json  phoebe.md  qiye.md  sora.json  sora.md  tashigan.json  tashigan.md  wushiling.json  wushiling.md
prompts/: README.md  persona-skill-generate.md  persona-test.md  persona-text-merge.md  report-period-summary.md  timeline-segment-describe.md  vision-screenshot.md
scripts/: README.md  _common.ps1  allow-hantransfer-firewall.ps1  batch-regenerate-personas.ps1  build-hanimport-release.ps1  build-hantransfer-apk.ps1  build.bat  build.ps1  cargo-dev.ps1  check-encoding.ps1  check-pet-css.py  clean-hantransfer.ps1  clean-project.ps1  clean-stale-target.ps1  copy-release.mjs  generate-pet-icons.py  hanagent.ps1  migrate-live2d.ps1  pet-test-api.mjs  restart-dev.bat  restart-dev.ps1  start-dev.bat  start-dev.ps1  start-hantransfer.bat  start-hantransfer.ps1  start.bat  start.ps1  stop-dev.ps1  tauri-before-build.mjs  tauri-dev.ps1  test-skeleton36-full.mjs  test-spine36-parse.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.preview.conf.json
src-tauri/capabilities/: default.json  pet-menu.json  pet.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml
src-tauri/src/: agent_http.rs  data_layout.rs  lib.rs  live2d_import.rs  log.rs  main.rs  manifest_lock.rs  state.rs  tray.rs
src-tauri/src/ai/: adapter.rs  catalog.rs  config.rs  json_util.rs  mod.rs  providers.rs  response.rs  runtime.rs  urls.rs
src-tauri/src/ai/adapters/: mod.rs  ollama.rs  openai.rs
src-tauri/src/analysis/: coordinator.rs  guard.rs  mod.rs  period.rs  period_scheduler.rs  text.rs  vision.rs
src-tauri/src/character/: avatar.rs  mod.rs
src-tauri/src/db/: character_profiles.rs  insights.rs  metrics.rs  mod.rs  periods.rs  reports.rs  sessions.rs  stats.rs  timeline_cache.rs  usage.rs
src-tauri/src/embedded/: mod.rs
src-tauri/src/ipc/: commands.rs  live2d_commands.rs  mod.rs
src-tauri/src/live2d/: mod.rs
src-tauri/src/persona/: import_reference.rs  mod.rs
src-tauri/src/persona_builder/: mod.rs
src-tauri/src/pet/: lines_import.rs  mod.rs  models.rs  wiki_scrape.rs
src-tauri/src/prompts/: mod.rs
src-tauri/src/report/: mod.rs
src-tauri/src/screenshot/: mod.rs
src-tauri/src/system/: autostart.rs  mcp_api.rs  mod.rs  performance.rs  win32_work_area.rs
src-tauri/src/test_api/: mod.rs
src-tauri/src/timeline/: describe.rs  json_log.rs  mod.rs  scheduler.rs
src-tauri/src/tracker/: activity_key.rs  audio_classify.rs  audio_monitor.rs  context_enrich.rs  display_name.rs  file_watcher.rs  icon.rs  idle.rs  input_monitor.rs  mod.rs  poller.rs  title_parse.rs  win32.rs  writer.rs
src-tauri/src/vault/: mod.rs
src-tauri/src/wechat/: account.rs  ilink.rs  mod.rs  push.rs  qr.rs  scheduler.rs  session.rs
src-tauri/src/work_type/: mod.rs
src/pet/: main.ts  (+10 more)
tools/: check-pet-css.py
(+484 files in other folders)
