[workspace]
members = ["hanimport", "hantransfer/desktop", "hanpet/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.82"
authors = ["hanagent"]
license = "MIT"

[workspace.dependencies]
axum = { version = "0.8", features = ["multipart"] }
clap = { version = "4.5", features = ["derive"] }
mdns-sd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "signal"] }
tower-http = { version = "0.6", features = ["cors", "limit", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = "0.21"
uuid = { version = "1", features = ["v4", "serde"] }

# hanpet release：优先编译速度（opt-level 1 + 高 codegen-units），关闭 LTO
[profile.release]
panic = "abort"
codegen-units = 512
incremental = true
lto = false
opt-level = 1
strip = true
