[package]
name = "xiaohan-daily"
version = "0.1.0"
description = "小寒日报 — 本地活动追踪与日报"
authors = ["hanagent"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "xiaohan_daily_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
tokio = { version = "1", features = ["rt", "time", "sync"] }
notify = "7"
rfd = "0.15"

[profile.release]
panic = "abort"
codegen-units = 16
incremental = true
lto = "thin"
opt-level = 2
strip = true

[profile.release-small]
inherits = "release"
codegen-units = 1
incremental = false
lto = true
opt-level = "s"
